# multimodal_insurance_project

./: .gitignore  README.md  features_insert.py  main.py  make_sample_template.py  predict.py  pyproject.toml  train_embedding.py
models/: preprocessed.pkl
notebooks/: 00_explore_tabular.ipynb  01_explore_text.ipynb  notes.txt
src/: preprocess.py  train.py
tests/: test_predict.py
